Jokin vialla listan populoimisessa [TyotehtavatFragment]

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Työtehtävät</string>
+    <string name="title_section2">Uutiset</string>
+    <string name="title_section3">Ohjeet</string>
+    <string name="title_section4">Asetukset</string>
 
 </resources>
