This is a test.

--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="title_section2">Uutiset</string>
     <string name="title_section3">Ohjeet</string>
     <string name="title_section4">Asetukset</string>
+    <string name="NewsResource">DilleDong</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
