--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tyomaa_search_view">Haettava työmaa</string>
+    <string name="tyomaa_button">Hae</string>
 
 </resources>
