--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -12,5 +12,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tyomaa_search_view">Haettava työmaa</string>
     <string name="tyomaa_button">Hae</string>
+    <string name="title_activity_piirustukset_ohjeet">PiirustuksetOhjeetActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="piirustukset_ohjeet_search_view">Hae piirustus tai ohje</string>
+    <string name="piirustukset_ohjeet_button">Hae</string>
 
 </resources>
